// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductInfo should render ProductInfoCAB with the right props if product is CAB 1`] = `
<ProductInfoCAB
  descriptions={
    Array [
      Immutable.List [
        "descriptions0",
        "descriptions1",
    ],
      Immutable.List [
        "descriptions2",
    ],
    ]
  }
  marketingDescriptions={
    Immutable.Map {
    }
  }
/>
`;

exports[`ProductInfo should render ProductInfoNOCAB with the right props if product is NOCAB 1`] = `
<ProductInfoNOCAB
  descriptions={
    Immutable.List [
      "descriptions0",
      "descriptions1",
      "descriptions2",
    ]
  }
/>
`;
